# piek_detectie_lib

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.c
include/: peakdetect.h
src/: peakdetect.c
tests/: CMakeLists.txt  test_argsort.c  test_defrag_peaks.c  test_filter_distance.c  test_filter_height.c  test_local_maxima.c  test_savitzky_golay_filter.c  test_sum_samples.c
tests/readings/: 50khz50perc1p1.txt  expected_savgol_filter.txt  expected_sum.txt
tests/readings/indices/: 50khz50perc1p1_indices_distance_filtered.txt  50khz50perc1p1_indices_height_filtered.txt  50khz50perc1p1_peak_indices_argsorted.txt  50khz50perc1p1_peak_indices_quicksorted.txt
tests/readings/peaks/: 50khz50perc1p1_indices.txt  50khz50perc1p1_indices_argsort_sorted.txt  50khz50perc1p1_indices_argsort_sorted_stable.txt
